# SpineNet

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  pyproject.toml  requirements.txt  test.py
docs/: api.rst  conf.py  getting-started.rst  index.rst  loading-scans.rst  running-spinenet.rst
spinenet/: __init__.py  main.py
spinenet/io/: __init__.py  dicom_io.py  download.py  save_results.py
spinenet/models/: __init__.py  appearance.py  context.py  grading.py  ivd_segmenter.py  vfr.py
spinenet/utils/: __init__.py  accuracy_scores.py  classification.py  detect_and_group.py  detection_post_processing.py  discard_outliers.py  extract_volumes.py  gen_utils.py  gt_formatting.py  io.py  label_verts.py  scan_preprocessing.py
tutorials/: 01-quickstart.ipynb  01-try-spinenet.py  02-in-depth-detection-and-grading.ipynb  02-test.ipynb  02-whole-spine-detection.ipynb  03-spinegeneric-example-detections.ipynb
