[project]
name = "spinenet_rwindsor1"
version = "2.0.0"
authors = [
  { name="Rhydian Windsor", email="rhydian@robots.ox.ac.uk" },
]
description = "Automated software for: (i) detecting and labelling vertbrae in clinical spinal MRI scans, (ii) performing radiological grading of lumbar T2-weighted scans for a range of common spinal disorders"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://zeus.robots.ox.ac.uk/spinenet2/"
"Bug Tracker" = "https://github.com/rwindsor1/SpineNet/issues"
